do316/materials/labs/ha-loadbalance/.solution/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-web
  namespace: ha-loadbalance
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
